# fl-g13

./: .gitignore  FLOWER.md  LICENCE  Makefile  README.md  notes.txt  pyproject.toml  requirements.txt  todo.txt
docs/: mkdocs.yml
docs/docs/: index.md
fl_g13/: __init__.py  dataset.py  dataset_handler.py  features.py  plots.py
fl_g13/architectures/: BaseDino.py  __init__.py
fl_g13/base_experimentation/: dataset_handler.py
fl_g13/editing/: __init__.py  dataloader_utils.py  fisher.py  masking.py  pruner.py  sparse-fine-tuning.py  sparseSGDM.py
fl_g13/fl_pytorch/: DynamicQuorumClient.py  DynamicQuorumStrategy.py  FLOWER.md  FullyCentralizedMaskedClient.py  FullyCentralizedMaskedStrategy.py  LRUpdateFedAvg.py  LRUpdateWarmUpHeadTalosClient.py  __init__.py  base_client.py  client.py  client_app.py  constants.py  datasets.py  model.py  server_app.py  strategy.py  talos_client.py  task.py  utils.py  warm_up_head_talos_client.py
fl_g13/modeling/: __init__.py  eval.py  load.py  predict.py  test.py  train.py  ultis.py  utils.py
models/: .gitignore  BaseDino.py  BaseDinoModel.py  __init__.py
notebooks/: .gitignore  0.01-zt-explor-cifar-100-dataset.ipynb  0.02-cm-explor-cifar-100-sub-dataset.ipynb  0.02-zt-wandb-modify.ipynb  2.01-gs-visualize-mask-mismatch.ipynb  2.01-tg-sum-masks-sparsity.ipynb  2.02-tg-clients-masks-scores.ipynb  3.00-cm-boilerplate_training.ipynb  3.00-cm-centralized-model-inline-train.ipynb  3.01-cm-boilerplate-training.ipynb  3.01-cm-centralized-model-abra.ipynb  3.01-cm-centralized-model-aerodactyl.ipynb  3.01-cm-centralized-model-alakazam.ipynb  3.01-cm-centralized-model-altaria.ipynb  3.01-cm-centralized-model-amoonguss.ipynb  3.01-cm-centralized-model-ampharos.ipynb  3.01-cm-centralized-model-anorith.ipynb  3.01-cm-centralized-model-arbok.ipynb  3.01-cm-centralized-model-arcanine.ipynb  3.01-cm-centralized-model-arceus.ipynb  3.01-cm-centralized-model-archeops.ipynb  3.01-cm-centralized-model-giratina.ipynb  3.01-cm-centralized-model-inline-train.ipynb  3.01-cm-centralized-model-palkia.ipynb  3.01-cm-centralized-model-raikou.ipynb  3.01-cm-centralized-model-togekiss-nn.ipynb  3.01-cm-centralized-model-togekiss.ipynb  3.01-cm-centralized-model-uxie-model-editing.ipynb  3.01-cm-centralized-model-uxie.ipynb  3.01-cm-centralized-model-wigglypuff-warm-restart.ipynb  3.01-cm-centralized-model-xatu.ipynb  3.01-cm-centralized-model-yamask.ipynb  3.01-cm-centralized-model.ipynb  3.01-cm-fl-fully-centralized-masked.ipynb  3.01-cm-test-flower.ipynb  3.01-gs-test-flower.ipynb  3.01-tg-centralized-model-arcanine.ipynb  3.01-tg-centralized-model-azelf.ipynb  3.01-tg-fl-dynamic-quorum.ipynb  3.01-tg-fl-warmup-iid.ipynb  (+44 more)
notebooks/script/: 0.01-zt-explor-cifar-100-dataset.py  0.02-cm-explor-cifar-100-sub-dataset.py  0.02-zt-wandb-modify.py  2.01-gs-visualize-mask-mismatch.py  2.01-tg-sum-masks-sparsity.py  2.02-tg-clients-masks-scores.py  3.00-cm-boilerplate_training.py  3.01-cm-boilerplate-training.py  3.01-cm-centralized-model-abra.py  3.01-cm-centralized-model-aerodactyl.py  3.01-cm-centralized-model-alakazam.py  3.01-cm-centralized-model-altaria.py  3.01-cm-test-flower.py  (+69 more)
(+6 files in other folders)
