[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fl_g13"
version = "0.0.1"
description = "Federated Learning project"
authors = [{ name = "polito_mldl_g13" }]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10.0"

[tool.ruff]
line-length = 99
src = ["fl_g13"]
include = ["pyproject.toml", "fl_g13/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["fl_g13"]
force-sort-within-sections = true

[tool.flwr.app.config]
num-server-rounds = 4
fraction-fit = 0.25
fraction-evaluate = 0.5
local-epochs = 1
#server-device = "cpu"
use-wandb = false

[tool.flwr.federations.local-sim]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to
[tool.flwr.federations.local-sim-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.25

